# EMBER

./: .dockerignore  .env.example  .gitignore  DATA_GUIDE.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_SPEC.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
DOH Drinking Water Full Watershed.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a0000000b.gdbtablx  a0000000b.spx
config/: metrics.yaml  profiles.yaml
core/: admin_data.py  catalog.py  gcp_auth.py  settings.py
core/app/: __init__.py  admin_view.py  features.py  fire_view.py  range_view.py  selector_controls.py  streamlit_app.py
core/tiler/: main.py
dashboard/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/.duckdb/extensions/v1.3.2/osx_arm64/: spatial.duckdb_extension.info
dashboard/config/: metrics.yaml
dashboard/core/: __init__.py  gcp_auth.py  models.py  registry.py  settings.py  states.py  storage.py
dashboard/core/app/: ember_summary_draft.html  export.py  features.py  fire_view.py  map_view.py  streamlit_app.py
dashboard/core/tiler/: __init__.py  main.py
dashboard/ember_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dashboard/scripts/: __init__.py  bootstrap_sample_data.py  plot_overlap_over_time.py  validate_data.py
dashboard/tests/: test_registry.py
docs/: architecture.md
docs/adr/: 0001-duckdb-parquet-over-postgis.md  (+1 more)
scripts/: bootstrap_sample_data.py  build_manifest.py  deploy_cloudrun.sh  entrypoint.sh  ingest_oregon.py  ingest_washington.py  plot_overlap_over_time.py  run_local.sh
tests/: test_catalog.py  test_registry.py  test_states.py  test_storage.py
