[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ember-app"
version = "0.1.0"
description = "EMBER Streamlit dashboard for utility x wildfire lookups."
readme = "README.md"
requires-python = ">=3.11"
# Runtime dependencies live in requirements.txt (the single source of truth) and are
# read from it here so the packaged install (`pip install .`) and the plain
# `pip install -r requirements.txt` flow can never drift apart.
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
