[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ember-app"
version = "0.1.0"
description = "EMBER Streamlit dashboard for utility x wildfire lookups."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb==1.3.2",
  "fastapi==0.115.0",
  "folium==0.17.0",
  "fsspec==2024.6.1",
  "gcsfs==2024.6.1",
  "google-cloud-storage==2.18.2",
  "numpy==1.26.4",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "PyYAML==6.0.2",
  "rasterio==1.3.11",
  "requests==2.32.3",
  "streamlit==1.38.0",
  "streamlit-folium==0.22.0",
  "titiler.core==0.18.4",
  "uvicorn==0.30.6",
]

[project.optional-dependencies]
app = []
tiler = []
dev = [
  "pytest==8.3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
